--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       },
       {
         "name": "@0no-co/graphqlsp",
-        "schema": "./src/graphql/schema.graphql"
+        "schema": "./schema.graphql"
       }
     ],
     "paths": {
