--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "node prebuild && node scripts/ensure-graphql-generated.js && next dev",
     "generate": "npx graphql-codegen --config codegen.ts",
     "generate:local": "npx graphql-codegen --config codegen-local.ts",
-    "build": "node prebuild -prd && npm run generate && next build",
-    "build:dev": "node prebuild -dev && npm run generate && next build",
-    "build:prd": "node prebuild -prd && npm run generate && next build"
+    "build": "node prebuild -prd && yarn generate && next build",
+    "build:dev": "node prebuild -dev && yarn generate && next build",
+    "build:prd": "node prebuild -prd && yarn generate && next build"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -44,7 +44,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "immer": "^10.1.1",
     "libphonenumber-js": "^1.11.20",
-    "next": "15.1.6",
+    "next": "15.1.9",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "qrcode": "^1.5.4",
@@ -78,11 +78,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/stylis": "^4.2.7",
+    "@vitalets/google-translate-api": "^9.2.1",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "15.1.9",
     "prettier": "3.5.0",
-    "typescript": "^5",
-    "@vitalets/google-translate-api": "^9.2.1"
+    "typescript": "^5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
